# langgraph_adk_a2a_mcp

./: .env.example  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.devcontainer/: devcontainer.json
src/agents/tools/: calculator_tool.py  test_mcp.py
src/client/: __init__.py
src/core/: settings.py
