[project]
name = "agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Veera Vignesh", email = "kveeravignesh2@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "a2a-sdk>=0.3.3",
    "fastapi>=0.116.1",
    "fastmcp>=2.11.3",
    "google-adk>=1.13.0",
    "langgraph>=0.6.6",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "go-task-bin>=3.44.1",
    "langgraph-cli[inmem]",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "pytest-env",
    "pytest-asyncio",
    "ruff",
    "mypy",
]

[build-system]
requires = ["setuptools>=80.9"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
